<resources>
    <string name="app_name">プロファイル入力＆送信</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="caution_text">差支えのない範囲で入力し、<br/>送信ボタンを押してください</string>
    <string name="send_button_text">下記の内容を送信</string>
    <string name="sex_title">性別 : </string>
    <string name="age_title">年齢 : </string>
    <string name="height_title">身長 : </string>
    <string name="weight_title">体重 : </string>
    <string name="comment_title">コメント : </string>
    <string name="bt_setup_text">Bluetoothデバイス設定</string>

    <string name="search_device_text">Bluetoothデバイスを検索</string>
    <string name="device_title">Bluetoothデバイス</string>
    <string name="setup_return_text">戻る</string>
    <string name="default_age">30</string>
    <string name="default_height">160</string>
    <string name="default_weight">60</string>
</resources>
