<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schedmas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="viewModel"
            type="jp.gr.java_conf.sake_beer.bttest.viewmodel.ViewModelSetup"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="32dp"
            >

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_device_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleDevice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_title" />

                <TextView
                    android:id="@+id/textDevice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@={viewModel.deviceName}"
                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="32dp"
            >

            <Button
                android:id="@+id/buttonBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_return_text" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
